change tradeurl in recipe to search data
